@@ -9,13 +9,12 @@ import org.cryptomator.cryptofs.VaultConfig;
 import org.cryptomator.cryptofs.common.Constants;
 import org.cryptomator.cryptofs.common.FileSystemCapabilityChecker;
 import org.cryptomator.cryptofs.migration.api.MigrationContinuationListener;
-import org.cryptomator.cryptofs.migration.api.MigrationContinuationListener.ContinuationResult;
 import org.cryptomator.cryptofs.migration.api.MigrationProgressListener;
 import org.cryptomator.cryptofs.migration.api.Migrator;
 import org.cryptomator.cryptofs.migration.api.NoApplicableMigratorException;
 import org.cryptomator.cryptolib.api.CryptoException;
 import org.cryptomator.cryptolib.api.UnsupportedVaultFormatException;
-import org.cryptomator.cryptolib.common.MasterkeyFile;
+import org.cryptomator.cryptolib.common.MasterkeyFileAccess;
 import org.hamcrest.CoreMatchers;
 import org.hamcrest.MatcherAssert;
 import org.junit.jupiter.api.AfterEach;
@@ -25,48 +24,39 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 
 import java.io.IOException;
-import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystem;
 import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.nio.file.spi.FileSystemProvider;
 import java.util.Collections;
 import java.util.Map;
 
 public class MigratorsTest {
 
-	private MockedStatic<Files> filesClass;
 	private Path pathToVault;
-	private FileSystemCapabilityChecker fsCapabilityChecker;
 	private Path vaultConfigPath;
 	private Path masterkeyPath;
+	private FileSystemCapabilityChecker fsCapabilityChecker;
 
 	@BeforeEach
-	public void setup() {
-		filesClass = Mockito.mockStatic(Files.class);
-		pathToVault = Mockito.mock(Path.class, "path/to/vault");
+	public void setup(@TempDir Path tmpDir) {
+		pathToVault = tmpDir;
+		vaultConfigPath = tmpDir.resolve("vault.cryptomator");
+		masterkeyPath = tmpDir.resolve("masterkey.cryptomator");
 		fsCapabilityChecker = Mockito.mock(FileSystemCapabilityChecker.class);
-		vaultConfigPath = Mockito.mock(Path.class, "path/to/vault/vault.cryptomator");
-		masterkeyPath = Mockito.mock(Path.class, "path/to/vault/masterkey.cryptomator");
-
-		Mockito.when(pathToVault.resolve("masterkey.cryptomator")).thenReturn(masterkeyPath);
-		Mockito.when(pathToVault.resolve("vault.cryptomator")).thenReturn(vaultConfigPath);
-	}
-
-	@AfterEach
-	public void tearDown() {
-		filesClass.close();
 	}
 
 	@Test
 	@DisplayName("can't determine vault version without masterkey.cryptomator or vault.cryptomator")
 	public void throwsExceptionIfNeitherMasterkeyNorVaultConfigExists() {
-		filesClass.when(() -> Files.exists(vaultConfigPath)).thenReturn(false);
-		filesClass.when(() -> Files.exists(masterkeyPath)).thenReturn(false);
-
 		Migrators migrators = new Migrators(Collections.emptyMap(), fsCapabilityChecker);
 
 		IOException thrown = Assertions.assertThrows(IOException.class, () -> {
@@ -82,13 +72,14 @@ public class MigratorsTest {
 		private VaultConfig.UnverifiedVaultConfig unverifiedVaultConfig;
 
 		@BeforeEach
-		public void setup() {
-			Assumptions.assumeFalse(Files.exists(masterkeyPath));
+		public void setup() throws IOException {
 			vaultConfigClass = Mockito.mockStatic(VaultConfig.class);
 			unverifiedVaultConfig = Mockito.mock(VaultConfig.UnverifiedVaultConfig.class);
 
-			filesClass.when(() -> Files.exists(vaultConfigPath)).thenReturn(true);
-			filesClass.when(() -> Files.readString(vaultConfigPath)).thenReturn("vault-config");
+			Files.write(vaultConfigPath, "vault-config".getBytes(StandardCharsets.UTF_8));
+			Assumptions.assumeTrue(Files.exists(vaultConfigPath));
+			Assumptions.assumeFalse(Files.exists(masterkeyPath));
+
 			vaultConfigClass.when(() -> VaultConfig.decode("vault-config")).thenReturn(unverifiedVaultConfig);
 		}
 
@@ -164,28 +155,25 @@ public class MigratorsTest {
 	@Nested
 	public class WithExistingMasterkeyFile {
 
-		private MockedStatic<MasterkeyFile> masterkeyFileClass;
-		private MasterkeyFile masterkeyFile;
+		private MockedStatic<MasterkeyFileAccess> masterkeyFileAccessClass;
 
 		@BeforeEach
-		public void setup() {
+		public void setup() throws IOException {
+			masterkeyFileAccessClass = Mockito.mockStatic(MasterkeyFileAccess.class);
+			Files.createFile(masterkeyPath);
 			Assumptions.assumeFalse(Files.exists(vaultConfigPath));
-			masterkeyFileClass = Mockito.mockStatic(MasterkeyFile.class);
-			masterkeyFile = Mockito.mock(MasterkeyFile.class);
-
-			filesClass.when(() -> Files.exists(masterkeyPath)).thenReturn(true);
-			masterkeyFileClass.when(() -> MasterkeyFile.withContentFromFile(masterkeyPath)).thenReturn(masterkeyFile);
+			Assumptions.assumeTrue(Files.exists(masterkeyPath));
 		}
 
 		@AfterEach
 		public void tearDown() {
-			masterkeyFileClass.close();
+			masterkeyFileAccessClass.close();
 		}
 
 		@Test
 		@DisplayName("needs migration if vault version < Constants.VAULT_VERSION")
 		public void testNeedsMigration() throws IOException {
-			Mockito.when(masterkeyFile.allegedVaultVersion()).thenReturn(Constants.VAULT_VERSION - 1);
+			masterkeyFileAccessClass.when(() -> MasterkeyFileAccess.readAllegedVaultVersion(Mockito.any())).thenReturn(Constants.VAULT_VERSION - 1);
 			Migrators migrators = new Migrators(Collections.emptyMap(), fsCapabilityChecker);
 
 			boolean result = migrators.needsMigration(pathToVault, "vault.cryptomator", "masterkey.cryptomator");
@@ -196,7 +184,7 @@ public class MigratorsTest {
 		@Test
 		@DisplayName("needs no migration if vault version >= Constants.VAULT_VERSION")
 		public void testNeedsNoMigration() throws IOException {
-			Mockito.when(masterkeyFile.allegedVaultVersion()).thenReturn(Constants.VAULT_VERSION);
+			masterkeyFileAccessClass.when(() -> MasterkeyFileAccess.readAllegedVaultVersion(Mockito.any())).thenReturn(Constants.VAULT_VERSION);
 			Migrators migrators = new Migrators(Collections.emptyMap(), fsCapabilityChecker);
 
 			boolean result = migrators.needsMigration(pathToVault, "vault.cryptomator", "masterkey.cryptomator");
@@ -207,7 +195,7 @@ public class MigratorsTest {
 		@Test
 		@DisplayName("throws NoApplicableMigratorException if no migrator was found")
 		public void testMigrateWithoutMigrators() {
-			Mockito.when(masterkeyFile.allegedVaultVersion()).thenReturn(42);
+			masterkeyFileAccessClass.when(() -> MasterkeyFileAccess.readAllegedVaultVersion(Mockito.any())).thenReturn(1337);
 
 			Migrators migrators = new Migrators(Collections.emptyMap(), fsCapabilityChecker);
 			Assertions.assertThrows(NoApplicableMigratorException.class, () -> {
@@ -222,7 +210,7 @@ public class MigratorsTest {
 			MigrationProgressListener progressListener = Mockito.mock(MigrationProgressListener.class);
 			MigrationContinuationListener continuationListener = Mockito.mock(MigrationContinuationListener.class);
 			Migrator migrator = Mockito.mock(Migrator.class);
-			Mockito.when(masterkeyFile.allegedVaultVersion()).thenReturn(0);
+			masterkeyFileAccessClass.when(() -> MasterkeyFileAccess.readAllegedVaultVersion(Mockito.any())).thenReturn(0);
 			Migrators migrators = new Migrators(Map.of(Migration.ZERO_TO_ONE, migrator), fsCapabilityChecker);
 
 			migrators.migrate(pathToVault, "vault.cryptomator", "masterkey.cryptomator", "secret", progressListener, continuationListener);
@@ -236,7 +224,7 @@ public class MigratorsTest {
 		public void testMigrateUnsupportedVaultFormat() throws NoApplicableMigratorException, CryptoException, IOException {
 			Migrator migrator = Mockito.mock(Migrator.class);
 			Migrators migrators = new Migrators(Map.of(Migration.ZERO_TO_ONE, migrator), fsCapabilityChecker);
-			Mockito.when(masterkeyFile.allegedVaultVersion()).thenReturn(0);
+			masterkeyFileAccessClass.when(() -> MasterkeyFileAccess.readAllegedVaultVersion(Mockito.any())).thenReturn(0);
 			Mockito.doThrow(new UnsupportedVaultFormatException(Integer.MAX_VALUE, 1)).when(migrator).migrate(Mockito.any(), Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.any());
 
 			Assertions.assertThrows(IllegalStateException.class, () -> {
